src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0016.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0016 {
  class A;
  class B;

  association Assoc1 A->B;
  association Assoc2 A<->B;
  association Assoc3 A<-B;
}
